[tool.poetry]
name = "radiopi"
version = "0.1.0"
description = "RadioPi control daemon"
authors = ["Dave Hall <dave@etianen.com>"]
license = "UNLICENCED"
readme = "README.md"
packages = [{ include = "radiopi" }]

[tool.poetry.dependencies]
python = "^3.9"
gpiozero = "^2.0"
"rpi.gpio" = { version = "^0.7.1", markers = "sys_platform == 'linux'" }
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
logot = "^1.1.1"
mypy = "^1.8.0"
ruff = "^0.2.2"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
radiopi = "radiopi:main"

[tool.coverage.run]
source = ["radiopi", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "assert False",
]

[tool.mypy]
files = ["radiopi/**/*.py", "tests/**/*.py"]
allow_redefinition = true
explicit_package_bases = true
show_column_numbers = true
strict = true
platform = "linux"

[[tool.mypy.overrides]]
module = ["gpiozero.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
console_output_style = "classic"
log_level = "DEBUG"
addopts = "--tb=native --cov"

[tool.ruff]
include = ["radiopi/**/*.py", "tests/**/*.py"]
line-length = 120
select = ["E", "F", "W", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
